kubernetes/titiler.ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "titiler"
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/proxy-body-size: "50g"
spec:
  tls:
    - hosts:
        - dep-pctitiler.westeurope.cloudapp.azure.com
      secretName: main-tls
  rules:
    - host: dep-pctitiler.westeurope.cloudapp.azure.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: titiler
                port:
                  number: 80
